# SohaibsAIbot

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  schema.sql
.github/workflows/: ci.yml
api/: ai_assistant_deps.py  ai_assistant_templates.py  config.py  db.py  main.py  readonly_db.py  security_headers.py
api/auth/: csrf.py  dependencies.py  rate_limiter.py  router.py  session_store.py
api/routes/: ai_assistant.py  dashboard.py  experiments.py  health.py  market.py  notifications.py  orders.py  portfolio.py  positions.py  risk.py  settings.py
api/schemas/: ai_assistant.py  dashboard.py  experiments.py  market.py  notifications.py  orders.py  portfolio.py  risk.py  settings.py
api/websocket/: account_resolver.py  connection_manager.py  gateway.py  router.py
config/: ingestion.yaml  regime_detector.yaml  risk_engine.yaml
core/: backtest_engine.py  confidence_engine.py  db.py  execution_model.py  experiment.py  feature_store.py  logging_config.py  metrics.py  portfolio.py  position_sizing.py  regime_config.py  regime_detector.py  signal_performance_store.py  strategy_base.py  strategy_registry.py  walk_forward.py
core/ai_assistant/: chat_query_service.py  chat_tool.py  chat_tool_registry.py  context_builder.py  daily_summary_job.py  events.py  explanation_cache.py  explanation_reader.py  llm_client.py  llm_usage_tracker.py  news_ingestion_service.py  news_source_adapter.py  news_source_registry.py  prompt_template.py  readonly_db.py
core/execution/: account_reader.py  binance_clock_sync.py  binance_error_classifier.py  binance_execution_adapter.py  binance_order_stream_consumer.py  binance_symbol_filter_cache.py  events.py  execution_adapter.py  external_trade_detection_service.py  fill_simulator.py  latency_simulator.py  live_execution_adapter.py  order.py  order_manager.py  order_reader.py  paper_execution_adapter.py  reconciliation_job.py
core/indicators/: derived.py  pandas_ta_adapter.py  register.py
core/ingestion/: backfill_service.py  binance_adapter.py  candle_validator.py  config.py  data_quality_service.py  errors.py  event_bus.py  events.py  exchange_adapter.py  gap_detection_service.py  gap_repair_service.py  incremental_update_service.py  observability.py  ohlcv_reader.py  rate_limiter.py  raw_ohlcv_store.py  retry_policy.py  run_log.py  scheduler.py  testing.py  timeframe.py  types.py  watermark.py
core/marketdata/: live_market_data_source.py  market_data_normalizer.py  websocket_connection.py
core/notifications/: email_sender.py  notification_log.py  notification_persister.py  preferences_store.py  severity.py
core/risk/: circuit_breaker.py  drawdown_monitor.py  events.py  exposure_tracker.py  kill_switch.py  loss_limit_tracker.py  position_sizing_strategies.py  rejection_reason.py  risk_config.py  risk_context.py  risk_decision.py  risk_engine.py
core/security/: _aead.py  arming_service.py  audit_db.py  binance_permission_checker.py  credential_provider.py  credential_vault.py  emergency_revocation.py  events.py  key_lifecycle_manager.py  kms_client.py  mainnet_gate.py  permission_checker.py  permission_validator.py
core/signals/: events.py  signal_scanner.py
docs/: ai_assistant_spec.md  dashboard_ui_spec.md  execution_engine_stage1_spec.md  execution_engine_stage2_spec.md  execution_engine_stage3_spec.md  gap_audit_report.md  historical_data_ingestion_spec.md  risk_engine_spec.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: README.md  arming.spec.ts  credential-entry.spec.ts  helpers.ts  kill-switch.spec.ts
news_sources/: coindesk_rss_adapter.py
scripts/: run_signal_bot.py  smoke_test_ingestion.py
strategies/: ema_cross.py  rsi_mean_reversion.py
tests/: test_backtest_engine.py  test_confidence_engine.py  test_execution_model.py  test_experiment.py  test_feature_store.py  test_metrics.py  test_pandas_ta_adapter.py  test_portfolio.py  test_regime_detector.py  test_regime_integration.py  test_signal_performance_store.py  test_walk_forward.py
(+125 files in other folders)
