[project]
name = "trading-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pandas-ta>=0.3.14b0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "prometheus-client>=0.20",
    "websockets>=12.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
]
# Only needed for a real Claude API call (core/ai_assistant/llm_client.py's
# lazy _build_real_client()) — the standard test suite uses a fake
# client and never imports this.
llm = [
    "anthropic>=0.40",
]

[tool.setuptools.packages.find]
include = ["core*", "strategies*", "news_sources*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "testnet: real Binance testnet integration tests — require BINANCE_TESTNET_API_KEY/BINANCE_TESTNET_API_SECRET env vars, skipped when absent",
]
